# net-tech

./: README.md
CopyDetector/: build.gradle  settings.gradle
CopyDetector/lib/: build.gradle
CopyDetector/src/CopyDetector/: CopyDetector.java  Main.java
CopyDetector/src/main/java/copydetector/: CopyDetector.java  GreatHasher.java  HostData.java  Listener.java  Main.java  PacketMaker.java  Sender.java
FileTransfer/Client/: build.gradle  settings.gradle
FileTransfer/Client/lib/: build.gradle
FileTransfer/Client/src/main/java/client/: Main.java  (+1 more)
FileTransfer/Server/: build.gradle  settings.gradle
FileTransfer/Server/lib/: build.gradle
PlaceFinder/: build.gradle  settings.gradle
PlaceFinder/src/main/java/: module-info.java
SnakeOnline/: SnakeOnline.pro  main.cpp
SnakeOnline/channels/: messagebuffer.h  messagechannel.cpp  messagechannel.h
SnakeOnline/channels/network/: networkmessagechannel.cpp  networkmessagechannel.h
SnakeOnline/controllers/: gamecontroller.cpp  gamecontroller.h
SnakeOnline/controllers/network/: networkgamecontroller.cpp  networkgamecontroller.h
SnakeOnline/field/: field.cpp  field.h
SnakeOnline/proto/: protohelp.cpp  protohelp.h  snakes.pb.cc  snakes.pb.h  snakes.proto
SnakeOnline/view/graphic/: announcedgameswidget.cpp  announcedgameswidget.h  fieldwidget.cpp  fieldwidget.h  gamehostingwidget.cpp  gamehostingwidget.h  gameinfowidget.cpp  gameinfowidget.h  graphicview.cpp  graphicview.h
SocksProxy/: CMakeLists.txt  ClientSession.cpp  ClientSession.h  Logger.cpp  Logger.h  README.md  SocksProxy.cpp  SocksProxy.h  main.cpp
(+36 files in other folders)
